syntax = "proto3";

package zelvy.workout;

option go_package = "github.com/rangodisco/zelvy/gen/zelvy/workout";
import "google/protobuf/timestamp.proto";


message WorkoutViewModel {
  string id = 1;
  int64 kcal_burned = 2;
  string activity_type = 3;
  string name = 4;
  string duration = 5;
  string picto = 6;
  string done_at = 7;
}